# montpellier_bike_prediction

./: pipeline.py  pyproject.toml  schema_bike_prediction.sql
data/processed/: weather_hourly_processed.csv
data/raw/: holidays_raw.csv  weather_hourly_raw.csv
notebooks/: prophet.ipynb
scripts/: load_counters.py
src/montpellier_bike_prediction/: __init__.py  config.py  db_supabase.py  pipeline.py
src/montpellier_bike_prediction/cli/: damier.py  load_bike_hourly.py  load_counters.py  load_holidays.py  load_weather_hourly.py  train_and_predict_prophet.py  train_and_predict_xgboost.py  update_weather_forecast.py
src/montpellier_bike_prediction/etl/: base_client.py  bike_client.py  bike_etl.py  holidays_client.py  holidays_etl.py  weather_client.py  weather_etl.py
